--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yeij Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>balls</h1>
-    <p>yup yessir</p>
+    <h1>About</h1>
+    <p>I'm Ian and this is my portfolio for all things related to game development (with some other works attached). Currently, I'm enrolled at the University of
+        Baltimore in the Simulation and Game Design program with a specialization in technical art. The main projects on this site will be the student projects,
+        game jam games, and miscellaneous game dev work such as mapping or modding.
+    </p>
 </body>
 </html>
