--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>About</h1>
-    <p>I'm Ian and this is my portfolio for all things related to game development (with some other works attached). Currently, I'm enrolled at the University of
+    <h1 style="background-color:dodgerblue">About</h1>
+    <p style="background-color:deepskyblue">I'm Ian and this is my portfolio for all things related to game development (with some other works attached). Currently, I'm enrolled at the University of
         Baltimore in the Simulation and Game Design program with a specialization in technical art. The main projects on this site will be the student projects,
         game jam games, and miscellaneous game dev work such as mapping or modding.
     </p>
